2007-08-16  Harry Cheung <cheung@fnal.gov>

	* tag V03-06-00
        * changes to enter a failed state on problem with an action and
          reporting the state and reason for failure in application web page

2007-06-30  Harry Cheung <cheung@fnal.gov>

	* tag V03-04-08
        * changes for xdaq3.9

2007-06-28  Harry Cheung <cheung@fnal.gov>

	* tag V03-04-07
        * changes to scripts for communication with Tier-0 (Markus)
        * changes to cfg files in test for LNF support change in IOPool/Streamer

2007-06-19  Harry Cheung <cheung@fnal.gov>

	* tag V03-04-06
        * remove xdaq3.9 changes from the head so we can submit changes to nightly

2007-06-13  Harry Cheung <cheung@fnal.gov>

	* tag V03-04-05
        * fixes to DQM collation and archiving from Bill Badgett
	* changes to scripts arguments for communication with Tier-0 from Markus
        * fix for using DQMHttpSource with a FUEP app running EP in async
